# gtk4-layer-shell-gir

./: .gitignore  .gitmodules  Cargo.toml  Gtk4LayerShell-1.0.gir  Gtk4SessionLock-1.0.gir  LICENSE  README.md  generate_bindings.md
.github/: dependabot.yaml
.github/actions/build_regenerate_test/: action.yaml
.github/actions/build_test_commit/: action.yaml
.github/actions/install_deps/: action.yaml  actions.yaml
.github/workflows/: build.yaml  publish.yaml  relm4-example.yaml  update.yaml
contrib/relm4-example/: Cargo.toml  README.md
contrib/relm4-example/src/: main.rs
gtk4-layer-shell/: Cargo.toml  Gir.toml  README.md
gtk4-layer-shell-sys/: Cargo.toml  Gir.toml  README.md  build.rs
gtk4-layer-shell-sys/src/: lib.rs  manual.rs
gtk4-layer-shell-sys/src/auto/: versions.txt
gtk4-layer-shell-sys/tests/: abi.rs  constant.c  layout.c  manual.h
gtk4-layer-shell/examples/: libadwaita.rs  relm4.rs  simple-example.rs
gtk4-layer-shell/src/: lib.rs  manual.rs
gtk4-layer-shell/src/auto/: enums.rs  functions.rs  mod.rs  versions.txt
gtk4-session-lock/: Cargo.toml  Gir.toml  README.md
gtk4-session-lock-sys/: Cargo.toml  Gir.toml  README.md  build.rs
gtk4-session-lock-sys/src/: lib.rs
gtk4-session-lock-sys/src/auto/: versions.txt
gtk4-session-lock-sys/tests/: abi.rs  constant.c  layout.c  manual.h
gtk4-session-lock/examples/: simple.rs
gtk4-session-lock/src/: lib.rs  manual.rs
gtk4-session-lock/src/auto/: functions.rs  instance.rs  mod.rs  versions.txt
