[workspace]
members = [
  "gtk4-layer-shell",
  "gtk4-layer-shell-sys",
  "gtk4-session-lock",
  "gtk4-session-lock-sys",
]
exclude = ["gir"]
resolver = "2"

[workspace.package]
authors = ["pentamassiv <pentamassiv@posteo.de>"]
rust-version = "1.70"
edition = "2021"
license = "MIT"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.0"
glib-sys = "0.22"
glib = "0.22"
gio = "0.22"
gdk4-sys = "0.11"
gdk = { package = "gdk4", version = "0.11" }
gtk4-sys = "0.11"
gobject-sys = "0.21"
gtk = { package = "gtk4", version = "0.11" }
system-deps = "7"
shell-words = "1.0"
tempfile = "3"
libadwaita = "0.9"
gtk4-layer-shell-sys = { path = "gtk4-layer-shell-sys", version = "0.5" }
gtk4-session-lock-sys = { path = "gtk4-session-lock-sys", version = "0.3" }
