[package]
name = "gtk4-layer-shell-sys"
version = "0.1.2"
description = "Unsave gir-generated FFI bindings for gtk4-layer-shell"
repository = "https://github.com/pentamassiv/gtk4-layer-shell-gir/tree/main/gtk4-layer-shell-sys"
documentation = "https://docs.rs/gtk4-layer-shell-sys/"
keywords = ["gtk4", "gtk4-layer-shell", "wayland", "FFI", "unsafe"]
categories = ["external-ffi-bindings", "gui"]
build = "build.rs"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.system-deps.gtk4_layer_shell_0]
name = "gtk4-layer-shell-0"
version = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "gtk4_layer_shell_sys"

[dependencies]
libc.workspace = true
glib-sys.workspace = true
gdk4-sys.workspace = true
gtk4-sys.workspace = true

[build-dependencies]
system-deps.workspace = true

[dev-dependencies]
shell-words.workspace = true
tempfile.workspace = true

[features]
