[package]
name = "gtk4-layer-shell-sys"
version = "0.5.2"
description = "Unsafe gir-generated FFI bindings for gtk4-layer-shell"
repository = "https://github.com/pentamassiv/gtk4-layer-shell-gir/tree/main/gtk4-layer-shell-sys"
documentation = "https://docs.rs/gtk4-layer-shell-sys/"
keywords = ["gtk4", "gtk4-layer-shell", "wayland", "FFI", "unsafe"]
categories = ["external-ffi-bindings", "gui"]
build = "build.rs"

[package.authors]
workspace = true

[package.rust-version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.metadata.system-deps.gtk4_layer_shell_0]
name = "gtk4-layer-shell-0"
version = "1"

[package.metadata.system-deps.gtk4_layer_shell_0.v1_3]
version = "1.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "gtk4_layer_shell_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gdk4-sys]
workspace = true

[dependencies.gtk4-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
default = []
v1_3 = []
