[package]
name = "gtk4-layer-shell"
version = "0.1.0"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
license = "MIT"
description = "Save gir-generated wrapper for gtk4-layer-shell"
repository = "https://github.com/pentamassiv/gtk4-layer-shell-gir/tree/main/gtk4-layer-shell"
documentation = "https://docs.rs/gtk4-layer-shell/"
keywords = ["gtk4", "gtk4-layer-shell", "wayland", "gir", "wrapper"]
categories = ["api-bindings", "gui"]
edition = "2021"

[package.metadata.docs.rs]
features = []

[features]

[dependencies]
libc = "0.2"
bitflags = "2.0"
glib = "0.18"
glib-sys = "0.18"
gdk = { package = "gdk4", version = "0.7" }
gtk = { package = "gtk4", version = "0.7" }
ffi = { package = "gtk4-layer-shell-sys", path = "../gtk4-layer-shell-sys", version = "0.1" }

[dev-dependencies]
gio = "0.18"
libadwaita = "0.5"
