[package]
name = "gtk4-session-lock"
version = "0.1.1"
description = "Save gir-generated wrapper for gtk4-ssesion-lock"
repository = "https://github.com/pentamassiv/gtk4-layer-shell-gir/tree/main/gtk4-session-lock"
documentation = "https://docs.rs/gtk4-session-lock/"
keywords = ["gtk4", "gtk4-session-lock", "wayland", "gir", "wrapper"]
categories = ["api-bindings", "gui"]
exclude = ["examples"]
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]

[dependencies]
libc.workspace = true
glib.workspace = true
glib-sys.workspace = true
gdk.workspace = true
gtk.workspace = true
gtk4-session-lock-sys.workspace = true

[dev-dependencies]
gio.workspace = true

[target.'cfg(docsrs)'.dependencies]
gdk = { package = "gdk4", version = "0.9", features = ["gl", "v4_16"] }
