[package]
name = "gtk4-session-lock"
version = "0.2.1"
description = "Safe gir-generated wrapper for gtk4-session-lock"
repository = "https://github.com/pentamassiv/gtk4-layer-shell-gir/tree/main/gtk4-session-lock"
documentation = "https://docs.rs/gtk4-session-lock/"
keywords = ["gtk4", "gtk4-session-lock", "wayland", "gir", "wrapper"]
categories = ["api-bindings", "gui"]
exclude = ["examples"]
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]


[features]
v1_1 = ["gtk4-session-lock-sys/v1_1"]
v1_2 = ["gtk4-session-lock-sys/v1_2", "v1_1"]

[dependencies]
libc.workspace = true
glib.workspace = true
glib-sys.workspace = true
gdk.workspace = true
gtk.workspace = true
gtk4-session-lock-sys.workspace = true

[dev-dependencies]
gio.workspace = true

[target.'cfg(docsrs)'.dependencies]
gdk = { workspace = true, features = ["gl", "v4_16"] }

[[example]]
name = "simple"
required-features = ["v1_2"]
